Fix for responsive video on mobile

--- a/alpha/assets/css/main.css
+++ b/alpha/assets/css/main.css
@@ -3797,3 +3797,17 @@
 .img-responsive {
     border-radius: 5px;
 }
+
+.videoWrapper {
+	position: relative;
+	padding-bottom: 53.1%; /* 16:9 */
+	padding-top: 25px;
+	height: 0;
+}
+.videoWrapper iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
